@@ -32,13 +32,13 @@
 #include <stdbool.h>
 #include <ctype.h>
 #include <string.h>
-#if __SDCC_LONGLONG
+#ifdef __SDCC_LONGLONG
 #include <stdckdint.h>
 #endif
 #include <limits.h>
 #include <errno.h>
 
-#if __SDCC_LONGLONG
+#if 0 // Bug 3798
 static signed char _isdigit(const char c, unsigned char base)
 {
   unsigned char v;
@@ -140,3 +140,4 @@ unsigned long long int strtoull(const char *nptr, char **endptr, int base)
   return (neg ? -ret : ret);
 }
 #endif
+
