@@ -32,14 +32,14 @@
 #include <stdbool.h>
 #include <ctype.h>
 #include <string.h>
-#if __SDCC_LONGLONG
+#ifdef __SDCC_LONGLONG
 #include <stdckdint.h>
 #endif
 #include <limits.h>
 #include <errno.h>
 #include <wchar.h>
 
-#if __SDCC_LONGLONG
+#if 0 // Bug 3798
 static signed char _isdigit(const wchar_t c, unsigned char base)
 {
   unsigned char v;
@@ -141,3 +141,4 @@ unsigned long long int wcstoull(const wchar_t *nptr, wchar_t **endptr, int base)
   return (neg ? -ret : ret);
 }
 #endif
+
